--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_collections.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_collections.scss
@@ -11,6 +11,12 @@
     font-size: 42px !important;
     text-align: center;
     color: #fff !important;
+    line-height: 75px;
+    margin: 0px;
+    padding: 0px;
+    letter-spacing: 4px !important;
+    font-weight: 400;
+    text-transform: uppercase;
   }
 }
 
