build - new sliders

--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_collections.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_collections.scss
@@ -39,6 +39,10 @@
 .price_slider_amount {
   button {
     color: #4c4c4c !important;
+    background: none !important;
+    &:hover{
+      background: none !important;
+    }
   }
 }
 
