--- a/wp-content/themes/duck-and-cover/assets/sass/main.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/main.scss
@@ -91,5 +91,6 @@
 @import "duck/account";
 @import "duck/checkout";
 @import "duck/sliders";
+@import "duck/flexslider";
 @import "duck/share-buttons";
 @import "duck/product";
