--- a/wp-content/themes/duck-and-cover/assets/css/main.css
+++ b/wp-content/themes/duck-and-cover/assets/css/main.css
@@ -6094,7 +6094,7 @@ Copyright (c) 2015 Daniel Eden
 .menu > ul > li li > a .menu-item-text, .menu > .menu-item.narrow .sub-menu > li > a, .menu > .menu-item.narrow .children > li > a,
 .menu > ul > li .sub-menu > li > a,
 .menu > ul > li .children > li > a, .menu > .menu-item.menu-item-mega-menu > .sub-menu > .menu-item > .sub-menu .sub-menu > li > a, #menu-side > .menu-item.narrow > .sub-menu > li > a, #menu-side > .menu-item .menu-item.narrow > .sub-menu > li > a, .site-footer .menu li a, .site-footer input[type=email], .product-summary .product-title, #customer_login .register-sub-header, #customer_login .login .lost_password a,
-#customer_login .register .lost_password a, .celebwears-all .hero .caption h1, .duck-collection-header .page-title, .yith-woocommerce-ajax-product-filter a, .yith-woocommerce-ajax-product-filter span, .sticky-promo-cta-wrapper #sticky-promo-cta, #duck-front-page #single-featured-product-section .single-featured-caption-area .single-featured-product-caption h3, #duck-front-page #sunglasses-section .sunglasses-section_main .container h1, #duck-front-page #sunglasses-section .sunglasses-section_main .sidebar h1, .blog-title, .blog-slider-caption h1, .duck-slider-caption h3, .duck-slider-caption p {
+#customer_login .register .lost_password a, .celebwears-all .hero .caption h1, .duck-collection-header .page-title, .yith-woocommerce-ajax-product-filter a, .yith-woocommerce-ajax-product-filter span, .sticky-promo-cta-wrapper #sticky-promo-cta, #duck-front-page #single-featured-product-section .single-featured-caption-area .single-featured-product-caption h3, #duck-front-page #sunglasses-section .sunglasses-section_main .container h1, #duck-front-page #sunglasses-section .sunglasses-section_main .sidebar h1, .blog-title, .blog-slider-caption h1, .duck-slider-caption h3, .duck-slider-caption p, .blog-flexslider .flexslider ul li a h1, .home-flexslider .flexslider ul li .container .home-flexslider-caption h3, .home-flexslider .flexslider ul li .sidebar .home-flexslider-caption h3, .home-flexslider .flexslider ul li .container .home-flexslider-caption p, .home-flexslider .flexslider ul li .sidebar .home-flexslider-caption p {
   font-family: 'Gibson-Light', arial, sans-serif !important; }
 
 .gibson-regular, body,
@@ -6113,7 +6113,7 @@ input[type="submit"]:not(.grey-button),
 .header-02 #primary-menu > .menu-item > a,
 .header-03 #primary-menu > .menu-item > a, .header-04 #primary-menu > .menu-item > a, .header-01 #primary-menu > ul > li > a,
 .header-02 #primary-menu > ul > li > a,
-.header-03 #primary-menu > ul > li > a, .header-04 #primary-menu > ul > li > a, .post-share-buttons .share-buttons-text, .full-layout .entry-meta time, .comments-area .comment-list .metadata .post-date, .comments-area .comment-respond .comment-form label, .form-row label, .product .price span, .product-socials-wrapper span, .woocommerce-tabs .wc-tabs > li a, .shop_table.cart thead th, .coupon label, .celebwears-single .celebwears-single_share span:first-child, .duck-blog article .post-meta .post-meta-date, .duck-slider-caption h2, .duck-slider-caption .duck-slider-button, .navigation-shop-mobile .duck-nav-links-wrapper .duck-nav-links a {
+.header-03 #primary-menu > ul > li > a, .header-04 #primary-menu > ul > li > a, .post-share-buttons .share-buttons-text, .full-layout .entry-meta time, .comments-area .comment-list .metadata .post-date, .comments-area .comment-respond .comment-form label, .form-row label, .product .price span, .product-socials-wrapper span, .woocommerce-tabs .wc-tabs > li a, .shop_table.cart thead th, .coupon label, .celebwears-single .celebwears-single_share span:first-child, .duck-blog article .post-meta .post-meta-date, .duck-slider-caption h2, .duck-slider-caption .duck-slider-button, .home-flexslider .flexslider ul li .container .home-flexslider-caption h2, .home-flexslider .flexslider ul li .sidebar .home-flexslider-caption h2, .navigation-shop-mobile .duck-nav-links-wrapper .duck-nav-links a {
   font-family: 'Gibson-SemiBold', arial, sans-serif !important; }
 
 .gibson-bold {
@@ -6143,23 +6143,31 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: 0.05em; }
 
 h1 {
-  font-weight: normal !important;
+  font-weight: normal !important; }
+
+h1:not(.blog-flexslider-title):not(.home-flexslider-title) {
   color: #4C4C4C !important; }
 
 h2 {
   text-transform: uppercase;
-  font-size: 22px !important;
+  font-size: 22px !important; }
+
+h2:not(.home-flexslider-title) {
   color: #4C4C4C; }
 
 h3 {
-  font-size: 20px !important;
-  color: #AAAAAA !important; }
+  font-size: 20px !important; }
   h3.widget-title {
     color: #4c4c4c !important; }
 
+h3:not(.home-flexslider-title) {
+  color: #AAAAAA !important; }
+
 h4 {
   font-size: 18px !important;
-  line-height: 24px !important;
+  line-height: 24px !important; }
+
+h4:not(.allow-color-picker) {
   color: #4C4C4C !important; }
 
 h5 {
@@ -7502,7 +7510,7 @@ a {
   .menu > ul > li .children > li, .menu > .menu-item.menu-item-mega-menu > .sub-menu > .menu-item > .sub-menu .sub-menu > li, #menu-side > .menu-item.narrow > .sub-menu > li, #menu-side > .menu-item .menu-item.narrow > .sub-menu > li {
     padding: 0;
     padding-bottom: 20px;
-    width: 200px; }
+    width: 100px; }
     .menu > .menu-item.narrow .sub-menu > li:last-child, .menu > .menu-item.narrow .children > li:last-child,
     .menu > ul > li .sub-menu > li:last-child,
     .menu > ul > li .children > li:last-child, .menu > .menu-item.menu-item-mega-menu > .sub-menu > .menu-item > .sub-menu .sub-menu > li:last-child, #menu-side > .menu-item.narrow > .sub-menu > li:last-child, #menu-side > .menu-item .menu-item.narrow > .sub-menu > li:last-child {
@@ -11570,7 +11578,10 @@ body.boxed .navigation-shop.container, body.boxed .navigation-shop.sidebar {
   color: #d8120f; }
 
 .price_slider_amount button {
-  color: #4c4c4c !important; }
+  color: #4c4c4c !important;
+  background: none !important; }
+  .price_slider_amount button:hover {
+    background: none !important; }
 
 .duck-collection-breadcrumbs {
   text-align: center;
@@ -11975,6 +11986,362 @@ body.boxed .navigation-shop.container, body.boxed .navigation-shop.sidebar {
     font-size: 14px !important;
     line-height: 40px !important;
     padding: 2px 28px 0 28px !important; }
+
+.blog-flexslider {
+  position: relative;
+  margin-bottom: 80px; }
+  .blog-flexslider .flexslider ul li {
+    position: relative;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    height: 320px; }
+    @media (min-width: 768px) {
+      .blog-flexslider .flexslider ul li {
+        height: 450px; } }
+    @media (min-width: 1024px) {
+      .blog-flexslider .flexslider ul li {
+        height: 500px; } }
+    .blog-flexslider .flexslider ul li a {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0; }
+      .blog-flexslider .flexslider ul li a:hover h1 {
+        color: rgba(216, 18, 15, 0.5) !important; }
+      .blog-flexslider .flexslider ul li a h1 {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 32px !important;
+        text-transform: uppercase;
+        color: #fff;
+        text-align: center;
+        width: 100%;
+        padding: 0 20px;
+        transition: all .2s ease !important; }
+        @media (min-width: 768px) {
+          .blog-flexslider .flexslider ul li a h1 {
+            font-size: 37px !important; } }
+        @media (min-width: 1024px) {
+          .blog-flexslider .flexslider ul li a h1 {
+            font-size: 42px !important; } }
+
+.home-flexslider {
+  position: relative;
+  margin-bottom: 80px; }
+  .home-flexslider .flexslider ul li {
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 420px; }
+    @media (min-width: 768px) {
+      .home-flexslider .flexslider ul li {
+        height: 550px; } }
+    @media (min-width: 1024px) {
+      .home-flexslider .flexslider ul li {
+        height: 620px; } }
+    .home-flexslider .flexslider ul li .container, .home-flexslider .flexslider ul li .sidebar {
+      position: relative;
+      height: 420px; }
+      @media (min-width: 768px) {
+        .home-flexslider .flexslider ul li .container, .home-flexslider .flexslider ul li .sidebar {
+          height: 550px; } }
+      @media (min-width: 1024px) {
+        .home-flexslider .flexslider ul li .container, .home-flexslider .flexslider ul li .sidebar {
+          height: 620px; } }
+      .home-flexslider .flexslider ul li .container .home-flexslider-caption, .home-flexslider .flexslider ul li .sidebar .home-flexslider-caption {
+        position: absolute;
+        top: 50%;
+        left: 0;
+        transform: scale(0.7) translateY(-50%); }
+        @media (min-width: 768px) {
+          .home-flexslider .flexslider ul li .container .home-flexslider-caption, .home-flexslider .flexslider ul li .sidebar .home-flexslider-caption {
+            transform: scale(0.85) translateY(-50%); } }
+        @media (min-width: 1024px) {
+          .home-flexslider .flexslider ul li .container .home-flexslider-caption, .home-flexslider .flexslider ul li .sidebar .home-flexslider-caption {
+            transform: scale(1) translateY(-50%); } }
+        .home-flexslider .flexslider ul li .container .home-flexslider-caption h3, .home-flexslider .flexslider ul li .sidebar .home-flexslider-caption h3 {
+          color: #aaa;
+          font-size: 14px !important;
+          line-height: 14px !important;
+          margin: 0 0 15px 0 !important; }
+        .home-flexslider .flexslider ul li .container .home-flexslider-caption h2, .home-flexslider .flexslider ul li .sidebar .home-flexslider-caption h2 {
+          color: #4c4c4c;
+          font-size: 42px !important;
+          line-height: 42px !important;
+          margin: 0 0 15px 0 !important; }
+        .home-flexslider .flexslider ul li .container .home-flexslider-caption p, .home-flexslider .flexslider ul li .sidebar .home-flexslider-caption p {
+          color: #4c4c4c;
+          color: inherit;
+          font-size: 14px !important;
+          line-height: 14px !important;
+          margin: 0 0 15px 0 !important; }
+          .home-flexslider .flexslider ul li .container .home-flexslider-caption p a, .home-flexslider .flexslider ul li .sidebar .home-flexslider-caption p a {
+            font-size: 14px !important;
+            line-height: 14px !important;
+            color: #d8120f !important; }
+
+/*
+ * jQuery FlexSlider v2.6.1
+ * http://www.woothemes.com/flexslider/
+ *
+ * Copyright 2012 WooThemes
+ * Free to use under the GPLv2 and later license.
+ * http://www.gnu.org/licenses/gpl-2.0.html
+ *
+ * Contributing author: Tyler Smith (@mbmufffin)
+ *
+ */
+/* ====================================================================================================================
+ * FONT-FACE
+ * ====================================================================================================================*/
+@font-face {
+  font-family: 'flexslider-icon';
+  src: url("fonts/flexslider-icon.eot");
+  src: url("fonts/flexslider-icon.eot?#iefix") format("embedded-opentype"), url("fonts/flexslider-icon.woff") format("woff"), url("fonts/flexslider-icon.ttf") format("truetype"), url("fonts/flexslider-icon.svg#flexslider-icon") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+/* ====================================================================================================================
+ * RESETS
+ * ====================================================================================================================*/
+.flex-container a:hover,
+.flex-slider a:hover {
+  outline: none; }
+
+.slides,
+.slides > li,
+.flex-control-nav,
+.flex-direction-nav {
+  margin: 0;
+  padding: 0;
+  list-style: none; }
+
+.flex-pauseplay span {
+  text-transform: capitalize; }
+
+/* ====================================================================================================================
+ * BASE STYLES
+ * ====================================================================================================================*/
+.flexslider {
+  margin: 0;
+  padding: 0; }
+
+.flexslider .slides > li {
+  display: none;
+  -webkit-backface-visibility: hidden; }
+
+.flexslider .slides img {
+  width: 100%;
+  display: block; }
+
+.flexslider .slides:after {
+  content: "\0020";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0; }
+
+html[xmlns] .flexslider .slides {
+  display: block; }
+
+* html .flexslider .slides {
+  height: 1%; }
+
+.no-js .flexslider .slides > li:first-child {
+  display: block; }
+
+/* ====================================================================================================================
+ * DEFAULT THEME
+ * ====================================================================================================================*/
+.flexslider {
+  margin: 0;
+  background: #fff;
+  position: relative;
+  zoom: 1; }
+
+.flexslider .slides {
+  zoom: 1; }
+
+.flexslider .slides img {
+  height: auto;
+  -moz-user-select: none; }
+
+.flex-viewport {
+  max-height: 2000px;
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  transition: all 1s ease; }
+
+.loading .flex-viewport {
+  max-height: 300px; }
+
+.carousel li {
+  margin-right: 5px; }
+
+.flex-direction-nav {
+  *height: 0;
+  display: none; }
+
+.flex-direction-nav a {
+  text-decoration: none;
+  display: block;
+  width: 40px;
+  height: 40px;
+  margin: -20px 0 0;
+  position: absolute;
+  top: 50%;
+  z-index: 10;
+  overflow: hidden;
+  opacity: 0;
+  cursor: pointer;
+  color: rgba(0, 0, 0, 0.8);
+  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out; }
+
+.flex-direction-nav a:before {
+  font-family: "flexslider-icon";
+  font-size: 40px;
+  display: inline-block;
+  content: '\f001';
+  color: rgba(0, 0, 0, 0.8);
+  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3); }
+
+.flex-direction-nav a.flex-next:before {
+  content: '\f002'; }
+
+.flex-direction-nav .flex-prev {
+  left: -50px; }
+
+.flex-direction-nav .flex-next {
+  right: -50px;
+  text-align: right; }
+
+.flexslider:hover .flex-direction-nav .flex-prev {
+  opacity: 0.7;
+  left: 10px; }
+
+.flexslider:hover .flex-direction-nav .flex-prev:hover {
+  opacity: 1; }
+
+.flexslider:hover .flex-direction-nav .flex-next {
+  opacity: 0.7;
+  right: 10px; }
+
+.flexslider:hover .flex-direction-nav .flex-next:hover {
+  opacity: 1; }
+
+.flex-direction-nav .flex-disabled {
+  opacity: 0 !important;
+  filter: alpha(opacity=0);
+  cursor: default;
+  z-index: -1; }
+
+.flex-pauseplay a {
+  display: block;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  bottom: 5px;
+  left: 10px;
+  opacity: 0.8;
+  z-index: 10;
+  overflow: hidden;
+  cursor: pointer;
+  color: #000; }
+
+.flex-pauseplay a:before {
+  font-family: "flexslider-icon";
+  font-size: 20px;
+  display: inline-block;
+  content: '\f004'; }
+
+.flex-pauseplay a:hover {
+  opacity: 1; }
+
+.flex-pauseplay a.flex-play:before {
+  content: '\f003'; }
+
+.flex-control-nav {
+  width: 100%;
+  position: absolute;
+  bottom: 0px;
+  text-align: center;
+  z-index: 55; }
+
+.flex-control-nav li {
+  margin: 0 3px;
+  display: inline-block;
+  zoom: 1;
+  *display: inline; }
+
+.flex-control-paging li a {
+  width: 8px;
+  height: 8px;
+  background: #e5e5e5;
+  display: block;
+  cursor: pointer;
+  text-indent: -9999px;
+  border-radius: 50%; }
+
+.flex-control-paging li a:hover {
+  background: #fff; }
+
+.flex-control-paging li a.flex-active {
+  background: #fff;
+  cursor: default; }
+
+.flex-control-thumbs {
+  margin: 5px 0 0;
+  position: static;
+  overflow: hidden; }
+
+.flex-control-thumbs li {
+  width: 25%;
+  float: left;
+  margin: 0; }
+
+.flex-control-thumbs img {
+  width: 100%;
+  height: auto;
+  display: block;
+  opacity: .7;
+  cursor: pointer;
+  -moz-user-select: none;
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  transition: all 1s ease; }
+
+.flex-control-thumbs img:hover {
+  opacity: 1; }
+
+.flex-control-thumbs .flex-active {
+  opacity: 1;
+  cursor: default; }
+
+/* ====================================================================================================================
+ * RESPONSIVE
+ * ====================================================================================================================*/
+@media screen and (max-width: 860px) {
+  .flex-direction-nav .flex-prev {
+    opacity: 1;
+    left: 10px; }
+  .flex-direction-nav .flex-next {
+    opacity: 1;
+    right: 10px; } }
 
 .share-buttons {
   margin-bottom: 12px; }
