--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_search-results.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_search-results.scss
@@ -1,9 +1,22 @@
 .search-results {
-  padding-top: 40px;
+  padding-top: 20px;
+  text-align: center;
+  margin-bottom: 36px;
+  @include clearfix();
   article {
-    @extend .col-xs-12;
-    @extend .col-sm-6;
-    @extend .col-md-4;
     margin-bottom: 60px;
+    text-align: left;
+    @include media-breakpoint-up(md) {
+      float: left;
+      padding: 0 40px;
+      width: 50%;
+      &:nth-child(2n+2) {
+        clear: left;
+      }
+    }
+  }
+  .posts-navigation {
+    clear: both;
+    margin-bottom: 40px;
   }
 }
