--- a/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_notices.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_notices.scss
@@ -1,7 +1,7 @@
 //Woocommerce Message
 .woocommerce-message {
     position: relative;
-    margin-bottom: 30px;
+    margin-top: 80px;
     padding: 20px 15px 20px 50px;
     border: 3px solid #000;
     background: #FFF;
