--- a/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_page.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_page.scss
@@ -81,7 +81,10 @@
     }
     .page-title {
         margin-top: 15px;
-        margin-bottom: 50px;
+        margin-bottom: 27px;
+        font-size: 42px !important;
+        text-transform: uppercase;
+        @extend .gibson-semibold;
     }
     .return-to-shop {
         margin-bottom: 0;
@@ -256,9 +259,9 @@
 }
 
 @include media-breakpoint-up(md) {
-    .cart-empty {
-        padding: 250px 15px;
-    }
+    // .cart-empty {
+    //     padding: 250px 15px;
+    // }
     #coupon_code {
         width: 350px;
     }
