--- a/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_product-single.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_product-single.scss
@@ -508,6 +508,7 @@ body.boxed {
         .comment-reply-title {
             @extend %heading-style-3;
             margin-bottom: 40px;
+            letter-spacing: 0.1em !important;
         }
         &.has-comment {
             .comment-reply-title {
